--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 ﻿body {
-    background: url(https://github.com/KrishnaSolo/KrishnaSolo.github.io/blob/master/background.jpg);
+    background-image: url(https://github.com/KrishnaSolo/KrishnaSolo.github.io/blob/master/background.jpg);
     background-size: cover;
 }
