--- a/style.css
+++ b/style.css
@@ -2,23 +2,27 @@
     background-image: url(https://raw.githubusercontent.com/KrishnaSolo/KrishnaSolo.github.io/master/background.jpg);
     background-size: cover;
     background-attachment: scroll;
-    height: 1500px;
+   
     opacity: 0.65;
 }
 
 .header {
     color: #fff;
     background-color: #111;
-    padding: 20px;
+    box-sizing: content-box;
     text-align: center;
     margin-top: 200px;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 425px;
+    margin-right: 425px;
+    margin-bottom: 200px;
     text-transform: uppercase;
     font-size: 25px;
     letter-spacing: 10px;
 }
-
+    .header:hover {
+        color: #111;
+        background-color: #fff;
+    }
 
 p {
     color: whitesmoke;
