--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
     color: #fff;
     background-color: #111;
     box-sizing: content-box;
+    padding-top:10px;
+    padding-bottom: 10px;
     text-align: center;
     margin-top: 200px;
     margin-left: 425px;
