--- a/style.css
+++ b/style.css
@@ -5,25 +5,25 @@
     opacity: 0.65;
 }
 
-.header {
+a:link, a:visited {
     color: #fff;
     background-color: #111;
-    box-sizing: content-box;
-    padding-left: 18px;
-    padding-right: 18px;
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding-left: 75px;
+    padding-right: 60px;
+    padding-top: 28px;
+    padding-bottom: 28px;
     text-align: center;
-    margin-top: 205px;
-    margin-left: 425px;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 215px;
+    margin-left: 392px;
     margin-right: 425px;
     margin-bottom: 200px;
-    text-transform: uppercase;
-    font: 400 20px/1.8 "Lato", sans-serif;
+    font: 700 42px/1.8 "Lato", sans-serif;
     letter-spacing: 12px;
 }
 
-    .header:hover {
+    a:hover {
         color: #111;
         background-color: #fff;
     }
