--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,13 @@
-﻿body {
+body {
     background-image: url(https://images.unsplash.com/photo-1558675080-ee9b075603cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
     background-size: cover;
     background-attachment: scroll;
-    opacity: 0.65;
+    opacity: 0.95;
+    height: 1090px;
 }
-
+html {
+    scroll-behavior: smooth
+}
 .header {
     color: #fff;
     background-color: #111;
@@ -21,4 +24,24 @@
     text-transform: uppercase;
     font: 400 20px/1.8 "Lato", sans-serif;
     letter-spacing: 12px;
+    opacity:0.68;
 }
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav {
+    overflow: hidden;
+    opacity: 1;
+    background-color: #333;
+}
+
+    /* Style the topnav links */
+    .topnav a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
